--- a/style.css
+++ b/style.css
@@ -68,9 +68,9 @@ p {
   font-size: 1.8rem;
 }
 
-/* CLASSES TO MAKE MODAL WORK */
+/* MODAL WINDOW */
 
-.modal { /* WINDOW */
+.modal {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -85,7 +85,9 @@ p {
   transition: all 0.3s;
 }
 
-.hidden { /* ANIMATION */
+/* ANIMATIONS */
+
+.hidden {
   opacity: 0;
   visibility: hidden;
 }
@@ -114,7 +116,9 @@ p {
   visibility: hidden;
 }
 
-.overlay { /* BACKGROUND */
+/* OVERLAY / BACKGROUND */
+
+.overlay {
   position: absolute;
   top: 0;
   left: 0;
